welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var p :  Int
    ^Array2:23: error: object toInt is not a member of package ch
	p == ch.toInt;
                ^Array2:27: error: not found: value setBrosseCouleur
	setBrosseCouleur(k + p);
        ^